# qmux

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  HOOKS.md  LICENSE  README.md  fly.toml  index.html  package-lock.json  package.json  qmux.config.json  vite.config.ts
.claude/agents/: feature-builder.md
.claude/commands/: feature.md
docs/: queue-pause-spec.md  session-fork-spec.md  tab-nesting-spec.md
public/: dictation-worklet.js
qmux-opencode-plugin/plugins/: qmux-notify.js
qmux-opencode-plugin/tests/: qmux-notify.test.mjs
qmux-plugin/.claude-plugin/: plugin.json
scripts/: build.sh  check-terminal-scrollback.mjs  cleanup-tauri-dmg.sh  generate-latest-json.sh  release.sh  test-app-shortcuts.mjs  test-claude-turns.mjs  test-composer-slash-commands.mjs  test-diagnostics.mjs  test-home-rails.mjs  test-image-markers.mjs  test-native-terminal-keyboard.mjs  test-pane-splits.mjs  test-research-conversations.mjs  test-research-documents.mjs  test-research-events.mjs  test-research-folders.mjs  test-research-highlights.mjs  test-research-history.mjs  test-research-instruction-setting.mjs  test-research-navigation.mjs  test-research-threads.mjs  test-tagged-instructions.mjs  test-terminal-attention.mjs  test-thread-graph-overlay.mjs  test-transcript-annotations.mjs  test-turn-timeline.mjs  test-workspace-scope.mjs
site/: index.html
src/: App.tsx  appTypes.ts  dictationStatus.ts  main.tsx  styles.css  types.ts  useDictation.ts  whisperWorker.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: annotations.rs  claude.rs  cli.rs  config.rs  connection_limit.rs  control_socket.rs  diagnostics.rs  dictation_cache.rs  encyclopedia.rs  events.rs  file_server.rs  global_task_launcher.rs  hooks.rs  image_files.rs  launch_path.rs  main.rs  menu_bar.rs  native_terminal.rs  persistence.rs  prompt_library.rs  pty.rs  publishing.rs  recovery.rs  research.rs  scrollback.rs  shell_jobs.rs  show_hide_shortcut.rs  sleep.rs  state.rs  thread_graph.rs  title_generation.rs  transcript.rs  turn_queue.rs  updater.rs  workspace.rs
src-tauri/src/adapters/: claude.rs  codex.rs  grok.rs  mod.rs  opencode.rs
src-tauri/swift/: FoundationTitleGenerator.swift
src-tauri/swift-terminal/: Package.resolved  Package.swift
src-tauri/swift-terminal/Patches/: libghostty-spm-qmux.patch
src-tauri/swift-terminal/Sources/QmuxNativeTerminal/: GlobalTaskLauncherHotkey.swift  NativeTerminalBridge.swift  NativeTerminalContainerView.swift  NativeTerminalHost.swift  NativeTerminalPane.swift  QmuxNativeTerminal.swift  QmuxTerminalTheme.swift  QmuxTerminalView.swift  TerminalPaneSettings.swift  TerminalSessionRegistry.swift  WebAppShortcutRouting.swift
src/adapters/: claude.tsx  claudeTurns.ts  codex.tsx  grok.tsx  index.ts  opencode.tsx
src/components/: BrowserOverlay.tsx  BrowserOverlayControls.tsx  CommandPalette.tsx  ComposerSubmitShortcut.tsx  ConfirmDialogActionButton.tsx  DiagramBlock.tsx  DictationMicButton.tsx  DomSearchBar.tsx  GlobalTaskLauncher.tsx  HomeCascades.tsx  HomeGroupSelector.tsx  HomeRails.tsx  ImageLightbox.tsx  LauncherSelect.tsx  LinkContextMenu.tsx  NativeInput.tsx  PaneSearchBar.tsx  PromptLibraryMenu.tsx  PublishDialog.tsx  QueuedTurnCard.tsx  RecentSessionsPanel.tsx  RecoveredQueuePanel.tsx  SelectionAskPopup.tsx  SidebarModeToggle.tsx  TerminalPane.tsx  TranscriptActivity.tsx  TranscriptAnnotationLayer.tsx  TranscriptImage.tsx  TranscriptMarkdown.tsx  TranscriptPickerLink.tsx  TurnOverlay.tsx  TurnPaneHeader.tsx
src/hooks/: useConfirm.tsx  useNativeWebOverlayRegion.ts  useQmuxEvents.ts
src/lib/: adapterIcons.ts  api.ts  appHelpers.ts  appShortcuts.ts  clipboard.ts  composerActions.ts  composerSlashCommands.ts  composerTextarea.ts  diagnostics.ts  encyclopedia.ts  ghostty.ts  homeRails.ts  imageLightbox.ts  imageMarkers.ts  links.ts  markdownPlugins.ts  nativeTerminalKeyboard.ts  (+34 more)
tests/: appShortcuts.test.ts  claudeTurns.test.ts  composerSlashCommands.test.ts  diagnostics.test.ts  encyclopedia.test.ts  homeRails.test.ts  imageMarkers.test.ts  markdownMath.test.ts  nativeTerminalKeyboard.test.ts  paneSplits.test.ts  publication.test.ts  publicationComments.test.ts  researchConversations.test.ts  researchDocuments.test.ts  researchEvents.test.ts  researchFolders.test.ts  researchHighlights.test.ts  researchHistory.test.ts  researchInstructionSetting.test.ts  researchNavigation.test.ts  researchSelection.test.ts  researchThreads.test.ts  taggedInstructions.test.ts  terminalAttention.test.ts  threadGraphOverlay.test.ts  transcriptAnnotations.test.ts  turnTimeline.test.ts  workspaceScope.test.ts
web/: comments.test.ts  githubAuth.ts  server.test.ts  server.tsx  tsconfig.json
(+44 files in other folders)
