[package]
name = "qmux"
version = "0.1.0"
description = "A PTY-owned terminal for agent panes."
authors = ["Raymond"]
edition = "2024"

[[bin]]
name = "qmux"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6.0.0"
getrandom = "0.2"
libc = "0.2"
names = { version = "0.14", default-features = false }
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-single-instance = "2"
window-vibrancy = "0.7.1"
