[package]
name = "qmux"
version = "0.1.0"
description = "A PTY-owned terminal for agent panes."
authors = ["Raymond"]
license = "MIT"
edition = "2024"

[[bin]]
name = "qmux"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Shipping builds were using cargo's stock release profile. Thin LTO and a
# single codegen unit recover the cross-crate inlining a Tauri-sized dependency
# tree otherwise leaves behind, and stripping symbols meaningfully shrinks the
# binary the app (and every in-shell `qmux` CLI fork) must page in at launch.
# panic stays "unwind" deliberately: lock-poisoning recovery in the state and
# persistence paths assumes a stray panic doesn't take the whole app (and every
# live PTY) down with it.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[dependencies]
dirs = "6.0.0"
getrandom = "0.2"
libc = "0.2"
# Backend HTTP for the OpenRouter title proxy so the API key never enters the
# webview. `default-features = false` + `json` keeps this additive to the reqwest
# (rustls) build already pulled in transitively by tauri-plugin-updater.
reqwest = { version = "0.13", default-features = false, features = ["json"] }
names = { version = "0.14", default-features = false }
portable-pty = "0.9"
sha2 = "0.10"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
window-vibrancy = "0.7.1"
